--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -13472,7 +13472,7 @@ fieldset[disabled] .btn {
     -webkit-transform 250ms ease-in-out, transform 250ms ease-in-out !important;
   border-color: #b0b0b0 !important;
 }
-.form__textarea {
+.textarea {
   color: inherit !important;
   display: block !important;
   min-width: 100% !important;
