--- a/src/css/components/forms.css
+++ b/src/css/components/forms.css
@@ -446,7 +446,7 @@
     -webkit-transform 250ms ease-in-out, transform 250ms ease-in-out !important;
   border-color: #b0b0b0 !important;
 }
-.form__textarea {
+.textarea {
   color: inherit !important;
   display: block !important;
   min-width: 100% !important;
