--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -60927,8 +60927,8 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   touch-action: manipulation !important;
   font-family: 'Circular',-apple-system,'BlinkMacSystemFont','Roboto','Helvetica Neue',sans-serif !important;
   font-size: 16px !important;
-  line-height: var(---s-l-myu) !important;
-  font-weight: var(--jx-zk-pv) !important;
+  line-height: var(--line-height-md) !important;
+  font-weight: var(--font-weight-semibold) !important;
   border-radius: 8px !important;
   border-width: 1px !important;
   outline: 0 !important;
@@ -62140,8 +62140,8 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 .vlzgbic[class][class] {
   font-family: 'Circular',-apple-system,'BlinkMacSystemFont','Roboto','Helvetica Neue',sans-serif;
   font-size: 16px;
-  line-height: var(---s-l-myu);
-  font-weight: var(--jx-zk-pv);
+  line-height: var(--line-height-md);
+  font-weight: var(--font-weight-semibold);
   border-radius: 8px;
   outline: 0;
   padding: 14px 24px;
@@ -62247,8 +62247,8 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 }
 .oh3h96u[class][class] {
   font-size: 16px;
-  line-height: var(---s-l-myu);
-  line-height: var(---s-l-myu);
+  line-height: var(--line-height-md);
+  line-height: var(--line-height-md);
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
@@ -62291,8 +62291,8 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 }
 .t1jmf1i1[class][class] {
   font-size: 16px;
-  line-height: var(---s-l-myu);
-  line-height: var(---s-l-myu);
+  line-height: var(--line-height-md);
+  line-height: var(--line-height-md);
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
@@ -64046,9 +64046,9 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 }
 
 .h169a49r[class][class] {
-  font-size: var(--lhy-d-yl);
-  line-height: var(--fme-bf-w);
-  font-weight: var(--jx-zk-pv);
+  font-size: var(--font-size-lg);
+  line-height: var(--line-height-xxl);
+  font-weight: var(--font-weight-semibold);
 }
 
 .dir.h169a49r[class][class] {
@@ -64073,8 +64073,8 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   touch-action: manipulation !important;
   font-family: 'Circular',-apple-system,'BlinkMacSystemFont','Roboto','Helvetica Neue',sans-serif !important;
   font-size: 16px !important;
-  line-height: var(---s-l-myu) !important;
-  font-weight: var(--jx-zk-pv) !important;
+  line-height: var(--line-height-md) !important;
+  font-weight: var(--font-weight-semibold) !important;
   border-radius: 12px !important;
   border-width: var(--button-action-border-width, 2px) !important;
   border-style: solid !important;
@@ -65074,6 +65074,8 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   line-height: 20px !important;
   font-weight: 400 !important;
   outline: 0px !important;
+}
+
 ._1t0jy5tw {
   z-index: 2000 !important;
   position: fixed !important;
@@ -65504,8 +65506,8 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   touch-action: manipulation !important;
   font-family: var(--e-ls-qkw) !important;
   font-size: var(--iw-ehf-f) !important;
-  line-height: var(---s-l-myu) !important;
-  font-weight: var(--jx-zk-pv) !important;
+  line-height: var(--line-height-md) !important;
+  font-weight: var(--font-weight-semibold) !important;
   border-radius: 12px !important;
   outline: none !important;
   transition: box-shadow 0.2s ease 0s, -ms-transform 0.1s ease 0s, -webkit-transform 0.1s ease 0s, transform 0.1s ease 0s !important;
@@ -65760,4 +65762,75 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   animation-fill-mode: both !important;
   animation-name: keyframe_nzi634 !important;
 }
+
+._1ucy1zjv {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  background: rgb(255, 255, 255) !important;
+  position: relative !important;
+  width: 100vw !important;
+  max-width: 100vw !important;
+  max-height: 100% !important;
+  display: flex !important;
+  flex-direction: column !important;
+  box-shadow: rgb(0 0 0 / 28%) 0px 8px 28px !important;
+  border-top-left-radius: 12px !important;
+  border-top-right-radius: 12px !important;
+  animation-duration: 400ms !important;
+  animation-iteration-count: 1 !important;
+  animation-fill-mode: both !important;
+  animation-name: keyframe_d37zz3 !important;
+}
+@media (min-width: 744px) {
+  ._1ucy1zjv {
+    width: 100% !important;
+    max-width: 568px !important;
+    border-radius: 12px !important;
+  }
+}
+._1f6ydil {
+  -webkit-box-pack: justify !important;
+  -webkit-box-align: center !important;
+  display: flex !important;
+  flex: 0 0 auto !important;
+  align-items: center !important;
+  justify-content: space-between !important;
+  padding: 0px 24px !important;
+  min-height: 48px !important;
+  color: rgb(34, 34, 34) !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+  font-weight: 800 !important;
+}
+@media (min-width: 744px) {
+  ._1f6ydil {
+    min-height: 64px !important;
+  }
+}
+@media (min-width: 744px) {
+  .dir.i2ckb4z[class][class] {
+      padding: 0 24px;
+    }
+}
+.dir.tve6z7n[class][class] {
+  padding: 24px 24px 40px 24px;
+}
+.tve6z7n[class][class] {
+  color: var(--gray-900);
+  font-size: var(--font-size);
+  line-height: var(--line-height-md);
+}
+.dir.t1w965rm[class][class] {
+  padding-bottom: 12px;
+}
+.t1w965rm[class][class] {
+  font-size: var(--font-size-lg);
+  line-height: var(--line-height-xxl);
+  font-weight: var(--font-weight-semibold);
+}
+._11waoz2 {
+  color: var(--parsed-html-color, #222222) !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
+  font-weight: 600 !important;
+  text-decoration: underline !important;
 }
